# WebClients

./: .babelrc  .bowerrc  .dockerignore  .editorconfig  .env.default  .eslintignore  .eslintrc  .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitleaksignore  .gitmodules  .grype.yaml  .lintstagedrc  .margebot.yml  .prettierignore  .prettierrc  .semgrepignore  .stylelintignore  .stylelintrc  .travis.yml  .windsurfrules  .yarnrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Gruntfile.js  IMAGE_SUPPORT_TODO.md  LICENSE  MIGRATION.md  Makefile  README.md  azure-pipelines.yml  bower.json  browserslist.js  circle.yml  conf.build.js  conf.unit.tpl.js  cypress.json  dangerfile.js  (+31 more)
"build/: header.html  index.html  join-us.html  our-team.html  press.html  privacy-policy.html
.cursor/rules/: check-nested-rules.mdc  coding-standards.mdc  proton-inbox-tests.mdc  proton-inbox.mdc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  ask-a-question.md  config.yml
.github/workflows/: azure-static-web-apps-nice-mud-0ba331c10.yml  index.js  main.yml  node.js.yml.test
.yarn/patches/: @lexical-yjs-npm-0.16.1-498ef5e9f8.patch  @lexical-yjs-npm-0.21.0-3fb1cd60e1.patch  @lexical-yjs-npm-0.23.1-1077d1dfaf.patch  @lexical-yjs-npm-0.24.0-dc3b72551f.patch  @lexical-yjs-npm-0.25.0-051bd8dfbc.patch  @mlc-ai-web-llm-npm-0.2.32-df249f5180.patch  @noble-ed25519-npm-1.6.0-59c82563e0  @noble-ed25519-npm-1.7.3-033c70acb7.patch  @pdf-lib-standard-fonts-npm-1.0.0-963255903e.patch  client-zip-npm-2.3.0-366ca56ce9.patch  jsdom-npm-26.1.0-3857255f02.patch  lexical-npm-0.23.1-b61e3ad789.patch  lexical-npm-0.24.0-b4bcd9de3e.patch  rfc2047-npm-2.0.1-60a2a07c99.patch  ttag-npm-1.8.5-bf3d560d9a.patch
applications/account/: .bundlemonrc.json  .eslintrc.js  .eslintrc.json  CHANGELOG.md  appConfig.ts  babel.config.js  eslint.config.mjs  favicon.config.js  jest.config.js  jest.setup.js  package.json  rtl.setup.js  sentry.properties  tsconfig.json  webpack.config.js  webpack.config.ts  webpack.pages.ts
applications/authenticator/: CHANGELOG.md  README.md  appConfig.ts  eslint.config.mjs  index.html  jest.config.js  jest.setup.js  jest.transform.js  linuxarm64.dockerfile  me.proton.Authenticator.desktop  me.proton.Authenticator.metainfo.xml  package.json  tsconfig.json  webpack.config.ts  webpack.options.ts
applications/authenticator/src-tauri/: Cargo.toml  Makefile  build.rs  msi-template.wxs  tauri.conf.json
applications/authenticator/src-tauri/.cargo/: config.toml
applications/authenticator/src-tauri/capabilities/: default.json  desktop.json
applications/authenticator/src-tauri/icons/: icon.icns
applications/authenticator/src-tauri/src/: auth.rs  crypto.rs  error.rs  lib.rs  main.rs  storage_key.rs  store.rs
applications/authenticator/src-tauri/src/biometrics/: linux.rs  macos.rs  mod.rs  windows.rs
applications/calendar/: .bundlemonrc.json  .eslintrc.js  .eslintrc.json  CHANGELOG.md  appConfig.ts  docker-compose.yml  eslint-suppressions.json  eslint.config.mjs  favicon.config.js  jest.config.js  jest.setup.js  jest.transform.js  package.json  rtl.setup.js  sentry.properties  webpack.config.js  webpack.config.ts
applications/docs-editor/: .bundlemonrc.json  .env.example  .eslintrc.js  .prettierignore  .prettierrc  README.md  appConfig.ts  eslint.config.mjs  favicon.config.js  jest.config.js  jest.env.js  jest.resolver.js  jest.setup.js  (+4 more)
applications/pass-desktop/native/: .gitignore  Cargo.toml  Makefile  build.js  index.d.ts  index.js  package.json  sign.js
applications/pass-desktop/native/.cargo/: config.toml
applications/pass-desktop/native/host/: Cargo.toml
applications/pass-desktop/native/host/src/: ipc.rs  main.rs  native_message.rs  unlock.rs
applications/pass-desktop/native/napi/: Cargo.toml
applications/pass-desktop/native/napi/src/: autotypes.rs  lib.rs  updater.rs
applications/pass-desktop/native/napi/src/clipboards/: mod.rs
applications/pass-desktop/native/shared/: Cargo.toml
applications/pass-desktop/native/shared/src/: lib.rs  nm_install.rs
applications/pass-desktop/native/shared/src/biometrics/: check.rs  linux.rs  macos.rs  mod.rs  windows.rs
applications/pass-desktop/native/src/: autotypes.rs  lib.rs
applications/pass-desktop/native/src/biometrics/: linux.rs  macos.rs  mod.rs  windows.rs
applications/pass-desktop/native/src/clipboards/: linux.rs  macos.rs  mod.rs  windows.rs
cypress/: README.md
dckr/: Dockerfile  do
docker/: Dockerfile.dist  nginxd-default.conf
env/: conf.build.js  config.constants.js  config.js  configDefault.js  translationsLoader.js
po/: ca.po  cs.po  da.po  de.po  en.mo  en.po  es-MX.po  es.po  fr.mo  fr.po  hr.po  hu.po  i18n.txt  id.po  is.po  it.po  ja.po  lang-moment.json  lang.json  locales.json  messages.mo  nl.po  pl.po  pt-PT.po  pt.po  ro.po  ru.po  template.pot  tr.po  ua.po  zh-CN.po  zh-TW.po
src/: .htaccess  app.ejs  app.html  checkCompatApp.js  constants.ts  global.d.ts  index.html  index.ts  login.php  manifest.json  manifest.webmanifest  preload.ts  robots.txt  update.test.ts  update.ts
tasks/: build-image.sh  buildSubproject.sh  buildVendor.js  checkDependencies.js  checkEnv.js  checkInjector.sh  checkMomentLocales  commitI18n.sh  compileI18N.sh  compileI18n.js  createFavicon.sh  createI18nCache.js  createNewDeployBranches.sh  createVersionJSON.sh  crowdin  deploy.js  extract-translations.mjs  extractI18N.sh  generateChangelog.js  generateVersionInfo.js  lazyInstallVendor  lazyInstallVendor.js  lint.js  logcommits.sh  manageSRI  metrics.js  metrics.sh  noContext  privateDependencies.sh  rebaseWebClient  setupConfig.js  syncWebclient  templates.js  translationsLoader.js  unshiftReleaser.sh  updatePackageLock.sh  updateTranslations.sh  vendorCheckSum.sh
test/: karma.conf.js  mock.js  setup.js  setupPmcrypto.js  templates.js
webpack.tasks/: assets.loader.js  compileI18N.sh  createI18nCache.js  css.loader.js  css.tests.loader.js  deploy.js  extractI18N.sh  js.loader.js  optimization.js  plugins.js  templates.loader.js  uglify.plugin.js  vendorCheckSum.sh
(+15753 files in other folders)
