[package]
edition = "2021"
name = "native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
arboard = { version = "3.6.0", features = ["wayland-data-control"] }
base64 = "=0.21.5"
napi = { version = "2.12.2", features = ["async"] }
napi-derive = "2.12.2"
rand = "0.8.5"
sha2 = "=0.10.8"

[target.'cfg(windows)'.dependencies]
widestring = "=1.0.2"
windows = { version = "=0.54.0", features = [
  "Foundation",
  "Security_Credentials_UI",
  "Security_Cryptography",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_System_WinRT",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "=0.9.4"
security-framework = "=2.9.2"
security-framework-sys = "=2.9.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
