[package]
edition = "2021"
name = "host"
version = "0.0.0"

[dependencies]
anyhow = "1.0.80"
native_messaging = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
log = "0.4"
ftail = "0.3"
shared = { path = "../shared" }
base64 = "0.22"
interprocess = { version = "2.2", features = ["tokio"] }

[[bin]]
name = "proton_pass_nm_host"
path = "src/main.rs"
