[package]
edition = "2021"
name = "native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
enigo = { version = "0.6.1", default-features = false, features = ["libei_tokio"] }
napi = { version = "3.4", features = ["async"] }
napi-derive = "3.3"
shared = { path = "../shared" }

[build-dependencies]
napi-build = "2.2"
